[gd_scene load_steps=35 format=3 uid="uid://f34w2ggnrdr4"]

[ext_resource type="Shader" path="res://shaders/terrain_generation/single_noise_terrain.gdshader" id="1_8dbkh"]
[ext_resource type="Script" path="res://scripts/game_controller.gd" id="1_o1hmm"]
[ext_resource type="Shader" path="res://shaders/terrain_generation/global_position_terrain.gdshader" id="2_3rusk"]
[ext_resource type="Shader" path="res://shaders/post_processing/color_edge_detection.gdshader" id="3_80q1t"]
[ext_resource type="Shader" path="res://shaders/post_processing/hatching.gdshader" id="3_war5u"]
[ext_resource type="Script" path="res://scripts/free_cam.gd" id="3_y5k6m"]
[ext_resource type="Shader" path="res://shaders/terrain_generation/three_noise_terrain.gdshader" id="4_53kgt"]
[ext_resource type="PackedScene" uid="uid://drn7ouohlx3ib" path="res://scenes/sun.tscn" id="4_pt8eh"]
[ext_resource type="Shader" path="res://shaders/post_processing/edge_detection.gdshader" id="4_ywllq"]
[ext_resource type="PackedScene" uid="uid://bh5bhrnhou1cn" path="res://scenes/noise_gen.tscn" id="5_jkxt7"]
[ext_resource type="Texture2D" uid="uid://cjk683kkt4xqj" path="res://assets/hatching_stroke.png" id="6_qroo5"]
[ext_resource type="Shader" path="res://shaders/post_processing/posterization.gdshader" id="8_b0cxn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sft1i"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_3rusk")
shader_parameter/subdivide_ratio = 16.0

[sub_resource type="PlaneMesh" id="PlaneMesh_2tsj7"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_sft1i")
custom_aabb = AABB(-50, -50, -50, 100, 100, 100)
size = Vector2(16, 16)
subdivide_width = 254
subdivide_depth = 254

[sub_resource type="ViewportTexture" id="ViewportTexture_itk6t"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y83q0"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("1_8dbkh")
shader_parameter/noise = SubResource("ViewportTexture_itk6t")

[sub_resource type="PlaneMesh" id="PlaneMesh_1e07j"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_y83q0")
size = Vector2(16, 16)
subdivide_width = 254
subdivide_depth = 254

[sub_resource type="FastNoiseLite" id="FastNoiseLite_8vnxi"]
noise_type = 5
frequency = 0.0038

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_70fyo"]
noise = SubResource("FastNoiseLite_8vnxi")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_w8v2b"]
frequency = 0.0193

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_lwf47"]
noise = SubResource("FastNoiseLite_w8v2b")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_dofi0"]
noise_type = 2
frequency = 0.0848

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_css55"]
noise = SubResource("FastNoiseLite_dofi0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dsms6"]
render_priority = 0
shader = ExtResource("4_53kgt")
shader_parameter/noise1 = SubResource("NoiseTexture2D_70fyo")
shader_parameter/noise2 = SubResource("NoiseTexture2D_lwf47")
shader_parameter/noise3 = SubResource("NoiseTexture2D_css55")

[sub_resource type="PlaneMesh" id="PlaneMesh_4koi7"]
material = SubResource("ShaderMaterial_dsms6")
size = Vector2(16, 16)
subdivide_width = 254
subdivide_depth = 254

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c8miw"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_80q1t")
shader_parameter/color_mode = false

[sub_resource type="QuadMesh" id="QuadMesh_afiol"]
material = SubResource("ShaderMaterial_c8miw")
custom_aabb = AABB(0, 0, -500, 1000, 1000, 1000)
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a7qx5"]
render_priority = 0
shader = ExtResource("4_ywllq")
shader_parameter/color_mode = false

[sub_resource type="QuadMesh" id="QuadMesh_goclb"]
material = SubResource("ShaderMaterial_a7qx5")
custom_aabb = AABB(-500, -500, -500, 1000, 1000, 1000)
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ybj2v"]
render_priority = 0
shader = ExtResource("3_war5u")
shader_parameter/hatching_stroke = ExtResource("6_qroo5")

[sub_resource type="QuadMesh" id="QuadMesh_swnbj"]
material = SubResource("ShaderMaterial_ybj2v")
custom_aabb = AABB(-500, -500, -500, 1000, 1000, 1000)
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sctoh"]
render_priority = 0
shader = ExtResource("8_b0cxn")
shader_parameter/num_tones = 8

[sub_resource type="QuadMesh" id="QuadMesh_8hltt"]
material = SubResource("ShaderMaterial_sctoh")
custom_aabb = AABB(-500, -500, -500, 1000, 1000, 1000)
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="GDScript" id="GDScript_apko8"]
script/source = "extends LineEdit

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[node name="GameController" type="Node3D"]
script = ExtResource("1_o1hmm")

[node name="Terrain" type="Node" parent="."]

[node name="GlobalPosition" type="MeshInstance3D" parent="Terrain"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0632396, 0.24614, 1.24591)
visible = false
mesh = SubResource("PlaneMesh_2tsj7")
skeleton = NodePath("../..")

[node name="CustomValueTexture" type="MeshInstance3D" parent="Terrain"]
unique_name_in_owner = true
visible = false
mesh = SubResource("PlaneMesh_1e07j")

[node name="FastNoiseLite" type="MeshInstance3D" parent="Terrain"]
unique_name_in_owner = true
mesh = SubResource("PlaneMesh_4koi7")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.810021, 0.586401, 0, -0.586401, 0.810021, 0.130093, 10.6283, 9.80425)
script = ExtResource("3_y5k6m")
move_speed = 20.0

[node name="ColorEdgeDetection" type="MeshInstance3D" parent="Camera3D"]
unique_name_in_owner = true
transform = Transform3D(0.0911193, 0, -0.99584, 0, 1, 0, 0.99584, 0, 0.0911193, -0.169409, -0.798712, -1.85146)
visible = false
mesh = SubResource("QuadMesh_afiol")
skeleton = NodePath("../..")

[node name="DepthEdgeDetection" type="MeshInstance3D" parent="Camera3D"]
unique_name_in_owner = true
visible = false
mesh = SubResource("QuadMesh_goclb")

[node name="Hatching" type="MeshInstance3D" parent="Camera3D"]
unique_name_in_owner = true
visible = false
mesh = SubResource("QuadMesh_swnbj")

[node name="Posterization" type="MeshInstance3D" parent="Camera3D"]
unique_name_in_owner = true
visible = false
mesh = SubResource("QuadMesh_8hltt")

[node name="Lighting" type="Node" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Lighting"]
unique_name_in_owner = true
transform = Transform3D(0.622902, 0.719901, 0.306163, 0.666451, -0.693282, 0.274232, 0.409677, 0.0332228, -0.911625, 0, 7.03142, 0)

[node name="OmniLight3D" parent="Lighting" instance=ExtResource("4_pt8eh")]
unique_name_in_owner = true
visible = false

[node name="SubViewport" type="SubViewport" parent="."]

[node name="Noise" parent="SubViewport" instance=ExtResource("5_jkxt7")]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 28.8
anchor_bottom = 16.2
offset_bottom = 2.0
columns = 3

[node name="SelectedEffect" type="OptionButton" parent="UI/GridContainer"]
layout_mode = 2
tooltip_text = "Select a Post-Processing Effect"
selected = 0
item_count = 5
popup/item_0/text = "None"
popup/item_1/text = "Color Edge Detection"
popup/item_1/id = 1
popup/item_2/text = "Depth Edge Detection"
popup/item_2/id = 2
popup/item_3/text = "Hatching"
popup/item_3/id = 3
popup/item_4/text = "Posterization"
popup/item_4/id = 4

[node name="TerrainSelection" type="OptionButton" parent="UI/GridContainer"]
layout_mode = 2
selected = 2
item_count = 3
popup/item_0/text = "Global Position"
popup/item_1/text = "Value Noise Texture"
popup/item_1/id = 1
popup/item_2/text = "Fast Noise Lite"
popup/item_2/id = 2

[node name="SwitchLighting" type="Button" parent="UI/GridContainer"]
layout_mode = 2
text = "Switch Lighting"

[node name="PosterizationSettings" type="HBoxContainer" parent="UI/GridContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SubtractTone" type="Button" parent="UI/GridContainer/PosterizationSettings"]
layout_mode = 2
text = "-"

[node name="NumTones" type="LineEdit" parent="UI/GridContainer/PosterizationSettings"]
unique_name_in_owner = true
layout_mode = 2
text = "8"
placeholder_text = "Tones"
script = SubResource("GDScript_apko8")

[node name="AddTone" type="Button" parent="UI/GridContainer/PosterizationSettings"]
layout_mode = 2
text = "+"

[node name="EdgeDetectionColors" type="CheckButton" parent="UI/GridContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Toggle Color Palette"

[connection signal="item_selected" from="UI/GridContainer/SelectedEffect" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="UI/GridContainer/TerrainSelection" to="." method="_on_terrain_selection_item_selected"]
[connection signal="pressed" from="UI/GridContainer/SwitchLighting" to="." method="_on_switch_lighting_pressed"]
[connection signal="pressed" from="UI/GridContainer/PosterizationSettings/SubtractTone" to="." method="_on_subtract_tone_pressed"]
[connection signal="text_changed" from="UI/GridContainer/PosterizationSettings/NumTones" to="." method="_on_num_tones_text_changed"]
[connection signal="pressed" from="UI/GridContainer/PosterizationSettings/AddTone" to="." method="_on_add_tone_pressed"]
[connection signal="pressed" from="UI/GridContainer/EdgeDetectionColors" to="." method="_on_edge_detection_colors_pressed"]
